--- a/Gallery.html
+++ b/Gallery.html
@@ -42,12 +42,12 @@
         <div class="swiper-slide"><img src="images/15.JPG" alt="Room 15"></div>
         <div class="swiper-slide"><img src="images/16.JPG" alt="Room 16"></div>
         <div class="swiper-slide"><img src="images/17.JPG" alt="Room 17"></div>
-        <div class="swiper-slide"><img src="images/18.JPG" alt="Room 18"></div>
+        <div class="swiper-slide"><img src="images/18.jpg" alt="Room 18"></div>
         <div class="swiper-slide"><img src="images/19.JPG" alt="Room 19"></div>
         <div class="swiper-slide"><img src="images/20.JPG" alt="Room 20"></div>
         <div class="swiper-slide"><img src="images/21.JPG" alt="Room 21"></div>
         <div class="swiper-slide"><img src="images/22.JPG" alt="Room 22"></div>
-        <div class="swiper-slide"><img src="images/23.JPG" alt="Room 23"></div>
+        <div class="swiper-slide"><img src="images/23.jpg" alt="Room 23"></div>
         <div class="swiper-slide"><img src="images/24.JPG" alt="Room 24"></div>
         <div class="swiper-slide"><img src="images/25.JPG" alt="Room 25"></div>
         <div class="swiper-slide"><img src="images/26.JPG" alt="Room 26"></div>
@@ -58,9 +58,9 @@
         <div class="swiper-slide"><img src="images/31.JPG" alt="Room 31"></div>
         <div class="swiper-slide"><img src="images/32.JPG" alt="Room 32"></div>
         <div class="swiper-slide"><img src="images/33.JPG" alt="Room 33"></div>
-        <div class="swiper-slide"><img src="images/34.JPG" alt="Room 34"></div>
+        <div class="swiper-slide"><img src="images/34.jpg" alt="Room 34"></div>
         <div class="swiper-slide"><img src="images/35.JPG" alt="Room 35"></div>
-        <div class="swiper-slide"><img src="images/36.JPG" alt="Room 36"></div>
+        <div class="swiper-slide"><img src="images/36.jpg" alt="Room 36"></div>
         <div class="swiper-slide"><img src="images/37.JPG" alt="Room 37"></div>
       </div>
       <div class="swiper-pagination"></div>
